SUBDIRS = include construct \
		  actuator \
		  mars \
		  core_module \
		  admin \
		  client_handler \
		  customer device \
		  vendor_3com \
		  vendor_activestorage \
		  vendor_airport \
		  vendor_alliedtelesyn \
		  vendor_apcups \
		  vendor_cisco \
		  vendor_fcswitch \
		  vendor_filer \
		  vendor_foundry \
		  vendor_hp \
		  vendor_icmp \
		  vendor_infortrend \
		  vendor_liebert \
		  vendor_mgeups \
		  vendor_netbotz \
		  vendor_netsnmp \
		  vendor_printer \
		  vendor_snmpadv \
		  vendor_snmpbasic \
		  vendor_vtrak \
		  vendor_windows \
		  vendor_xserve \
		  vendor_xraid \
		  scripts \
                  conf \
		  htdocs

EXTRA_DIST = configure configure.in
